--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/AlexanderHildreth/learner-api#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chalk": "^4.0.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
