--- a/package.json
+++ b/package.json
@@ -1,41 +1,38 @@
 {
   "name": "y",
   "version": "1.0.0",
-  "description": "Backend API for learning material",
-  "main": "app.js",
+  "description": "A stock trade API ",
+  "main": "./src/app.js",
   "scripts": {
     "start": "NODE_ENV=production node server",
     "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AlexanderHildreth/learner-api.git"
+    "url": "git+https://github.com/AlexanderHildreth/stocke-trade-api.git"
   },
   "author": "Alexander Hildreth",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/AlexanderHildreth/learner-api/issues"
+    "url": "https://github.com/AlexanderHildreth/stocke-trade-api/issues"
   },
-  "homepage": "https://github.com/AlexanderHildreth/learner-api#readme",
+  "homepage": "https://github.com/AlexanderHildreth/stocke-trade-api#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.3",
-    "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.1",
     "helmet": "^3.22.0",
     "hpp": "^0.2.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10",
     "morgan": "^1.10.0",
-    "node-geocoder": "^3.27.0",
-    "nodemailer": "^6.4.6",
-    "slugify": "^1.4.0",
+    "path": "^0.12.7",
+    "sqlite": "^4.0.19",
+    "sqlite3": "^5.0.2",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
