--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-rate-limit": "^5.1.1",
     "helmet": "^3.22.0",
     "hpp": "^0.2.3",
+    "jade": "^1.11.0",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "sqlite": "^4.0.19",
