--- a/src/config/config.env
+++ b/src/config/config.env
@@ -1,4 +1,4 @@
 # APP ENV VARS
-API_V=v1 # API version - Needed
-NODE_ENV=development # Node enviroment
-PORT= # Port, can be changed, defaults to 5000
+API_V=v1
+NODE_ENV=development
+PORT=3000
