--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.1",
+    "fs": "0.0.1-security",
     "helmet": "^3.22.0",
     "hpp": "^0.2.3",
     "jade": "^1.11.0",
+    "mongoose": "^5.11.19",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "sqlite": "^4.0.19",
