Latest fixes, trades working

--- a/src/config/config.env
+++ b/src/config/config.env
@@ -1,5 +1,5 @@
 # APP ENV VARS
-MONGO_URI=
+MONGO_URI=mongodb+srv://sandboxUser:sandbox@cluster0.j7szj.mongodb.net/stock-trade-API?retryWrites=true&w=majority
 API_V=v1
 NODE_ENV=development
 PORT=3000
